add all the elements

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Let's Learn Japanese</title>
+        <title>The Teacher's Resource Room</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="main-container">
             <div class="navbar">
-                <div class="logo"><a href="">Let's learn Japanese</a></div>
+                <div class="logo">The Teacher's Resourse Room</div>
                 <div class="nav">
                     <a href="">Link 1</a>
                     <a href="">Link 2</a>
@@ -18,10 +18,11 @@
 
             <div class="hero">
                 <div class="left-side">
-                    <div class="message">This website is awesome</div>
-                    <p>This website has some subtext that goes here under the
-                        main title. It's a smaller font and the color is lower 
-                        in contrast.</p>
+                    <div class="message">The teacher's favorite place!</div>
+                    <p>As a teacher, planning and organizing lessons is our bread and butter.
+                        Which can be difficult sometimes, but don't worry TTRR is right here
+                        to help you out with lesson plans, ideas, resources and strategies,
+                        to make the most enjoyable experience out of your classes.</p>
                     <button>Sign Up!</button>
                 </div>
                 <div class="right-side">
@@ -29,7 +30,52 @@
                 </div>
             </div>
             
+            <div class="second-section">
+                <div class="information">
+                    <p>Some ramdon information.</p>
+                </div>
+                <div class="options-container">
+                    <div class="box">
+                        <img src="" alt="placeholder">
+                        <p>this is some subtext under an illustraition or image</p>
+                    </div>
+                    <div class="box">
+                        <img src="" alt="placeholder">
+                        <p>this is some subtext under an illustraition or image</p>
+                    </div>
+                    <div class="box">
+                        <img src="" alt="placeholder">
+                        <p>this is some subtext under an illustraition or image</p>
+                    </div>
+                    <div class="box">
+                        <img src="" alt="placeholder">
+                        <p>this is some subtext under an illustraition or image</p>
+                    </div>
 
+                </div>
+            </div>
+
+            <div class="third-section">
+                <p class="paragraph">This is an inspiring, 
+                    or a testimonial from a customer. Maybe 
+                    it's just filling up space, or maybe 
+                    people will actually read it. Who knows? 
+                    All I know is that it looks nice.</p>
+                <p class="paragraph-footing">-Thor, God of Thunder</p>
+            </div>
+
+            <div class="fourth-section">
+                <div class="box">
+                    <div>
+                        <p class="title">Call to action! It's time!</p>
+                        <p class="msj">Sign up for our product by clicking that button right over there!</p>
+                    </div>
+                    <button>Sign up</button>
+                </div>
+            </div>
+
+            <div class="footer">
+                <p>Copyright © The Odin Project 2021</p>
             </div>
         </div>
     </body>
