Replace some placeholder information

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <div class="main-container">
             <div class="navbar">
-                <div class="logo">The Teacher's Resourse Room</div>
+                <div class="logo">The Teacher's Resource Room</div>
                 <div class="nav">
-                    <a href="">Link 1</a>
-                    <a href="">Link 2</a>
-                    <a href="">Link 3</a>
+                    <a href="index.html">Home</a>
+                    <a href="">Contact Us</a>
+                    <a href="">Sing Up</a>
                 </div>
             </div>
 
@@ -20,9 +20,9 @@
                 <div class="left-side">
                     <div class="message">The teacher's favorite place!</div>
                     <p>As a teacher, planning and organizing lessons is our bread and butter.
-                        Which can be difficult sometimes, but don't worry TTRR is right here
-                        to help you out with lesson plans, ideas, resources and strategies,
-                        to make the most enjoyable experience out of your classes.</p>
+                        Which can be demanding at times. But do not worry, TTRR is right here
+                        to help you out with, lesson plans, ideas, resources and strategies,
+                        to make the most enjoyable experiences out of your classes.</p>
                     <button>Sign Up!</button>
                 </div>
                 <div class="right-side">
@@ -32,24 +32,24 @@
             
             <div class="second-section">
                 <div class="information">
-                    <p>Some ramdon information.</p>
+                    <p>What you'll find.</p>
                 </div>
                 <div class="options-container">
                     <div class="box">
                         <img src="" alt="placeholder">
-                        <p>this is some subtext under an illustraition or image</p>
+                        <p>Lesson plans</p>
                     </div>
                     <div class="box">
                         <img src="" alt="placeholder">
-                        <p>this is some subtext under an illustraition or image</p>
+                        <p>Presentations on different topics</p>
                     </div>
                     <div class="box">
                         <img src="" alt="placeholder">
-                        <p>this is some subtext under an illustraition or image</p>
+                        <p>Workbooks</p>
                     </div>
                     <div class="box">
                         <img src="" alt="placeholder">
-                        <p>this is some subtext under an illustraition or image</p>
+                        <p>Class resources</p>
                     </div>
 
                 </div>
